deploy: c561abf7d46a701aee76a3d47921dc84b82202b9

--- a/image/styling.html
+++ b/image/styling.html
@@ -32,6 +32,7 @@
           <li class="level2"><a href="../concepts/picture-object.html">Picture Object</a></li>
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
+          <li class="level2"><a href="../concepts/effects.html">Effects</a></li>
           <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
           <li class="level2"><a href="../pictures/picture-image.html">Picture and Image</a></li>
           <li class="level2"><a href="../pictures/shape.html">Shapes</a></li>
@@ -39,7 +40,8 @@
           <li class="level2"><a href="../pictures/layout.html">Layout</a></li>
           <li class="level2"><a href="../pictures/style.html">Style</a></li>
           <li class="level2"><a href="../pictures/transform.html">Transforms</a></li>
-          <li class="level2"><a href="../pictures/writing.html">Writing Output</a></li>
+          <li class="level2"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
+          <li class="level2"><a href="../pictures/writing.html">Writing to a File</a></li>
           <li class="level1"><a href="index.html">Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2 active"><a href="#">Styling</a></li>
