--- a/pictures/style.html
+++ b/pictures/style.html
@@ -32,6 +32,7 @@
           <li class="level2"><a href="../concepts/picture-object.html">Picture Object</a></li>
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
+          <li class="level2"><a href="../concepts/effects.html">Effects</a></li>
           <li class="level1"><a href="index.html">Creating Pictures</a></li>
           <li class="level2"><a href="picture-image.html">Picture and Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
@@ -39,7 +40,8 @@
           <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2 active"><a href="#">Style</a></li>
           <li class="level2"><a href="transform.html">Transforms</a></li>
-          <li class="level2"><a href="writing.html">Writing Output</a></li>
+          <li class="level2"><a href="drawing.html">Drawing to the Screen</a></li>
+          <li class="level2"><a href="writing.html">Writing to a File</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
