--- a/pictures/index.html
+++ b/pictures/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../concepts/frame-canvas.html">←</a></p>
+    <nav id="topbar"><p><a href="../concepts/effects.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="picture-image.html">→</a></p></nav>
     <nav id="sidebar">
@@ -32,6 +32,7 @@
           <li class="level2"><a href="../concepts/picture-object.html">Picture Object</a></li>
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
+          <li class="level2"><a href="../concepts/effects.html">Effects</a></li>
           <li class="level1 active"><a href="#">Creating Pictures</a></li>
           <li class="level2"><a href="picture-image.html">Picture and Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
@@ -39,7 +40,8 @@
           <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2"><a href="style.html">Style</a></li>
           <li class="level2"><a href="transform.html">Transforms</a></li>
-          <li class="level2"><a href="writing.html">Writing Output</a></li>
+          <li class="level2"><a href="drawing.html">Drawing to the Screen</a></li>
+          <li class="level2"><a href="writing.html">Writing to a File</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
@@ -58,7 +60,7 @@
     <div id="content">
         <main class="content">
             <h1 id="creating-pictures" class="title">Creating Pictures</h1>
-            <p>This chapter describes how to create pictures. It starts by discussing the two APIs Doodle provides to construct pictures, <code>Image</code> and <code>Picture</code>. It then describes the different features Doodle provides to create and style pictures.</p>
+            <p>This chapter describes how to create pictures. It starts by discussing the two APIs Doodle provides to construct pictures, <code>Image</code> and <code>Picture</code>. It then describes the different features Doodle provides to create and style pictures. Finally it discusses effects to draw a picture to a screen or save it to a file.</p>
             <p class="nextPage"><a href="picture-image.html">Picture and Image→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
