deploy: 07a3627df5496a7c3d5a81c4b0d1a673719afecf

--- a/pictures/writing.html
+++ b/pictures/writing.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="topbar"><p><a href="drawing.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="../image/index.html">→</a></p></nav>
+<p><a href="../algebra/index.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1"><a href="../index.html">Doodle</a></li>
@@ -42,12 +42,6 @@
           <li class="level2"><a href="transform.html">Transforms</a></li>
           <li class="level2"><a href="drawing.html">Drawing to the Screen</a></li>
           <li class="level2 active"><a href="#">Writing to a File</a></li>
-          <li class="level1"><a href="../image/index.html">Image</a></li>
-          <li class="level2"><a href="../image/shape.html">Shapes</a></li>
-          <li class="level2"><a href="../image/styling.html">Styling</a></li>
-          <li class="level2"><a href="../image/layout.html">Layout</a></li>
-          <li class="level2"><a href="../image/transform.html">Transforms</a></li>
-          <li class="level2"><a href="../image/writing.html">Writing to a File</a></li>
           <li class="level1"><a href="../algebra/index.html">Algebras</a></li>
           <li class="level2"><a href="../algebra/using.html">Using Algebras</a></li>
           <li class="level2"><a href="../algebra/picture.html">Picture</a></li>
@@ -86,7 +80,7 @@
   
 </span><span class="identifier">circle</span><span>.</span><span class="identifier">write</span><span>[</span><span class="type-name">Png</span><span>](</span><span class="string-literal">&quot;circle.png&quot;</span><span>)</span></code></pre>
             <p>Instead of using <code>Png</code> you could use <code>Gif</code> or <code>Jpg</code> to specify those file formats. You&#39;d probably want to change the file name as well if you change the format. That&#39;s it! Your masterpiece is now ready to share with the world.</p>
-            <p class="nextPage"><a href="../image/index.html">Image→</a></p>
+            <p class="nextPage"><a href="../algebra/index.html">Algebras→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
