deploy: 71c505a1b9fb1feb33f2d08f41fc94d9d02c9d37

--- a/pictures/writing.html
+++ b/pictures/writing.html
@@ -15,13 +15,14 @@
         rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="../creative-scala.css" />
+    <script src="../main.js"></script>
     <script> /* for avoiding page load transitions */</script>
 </head>
 
 <body>
     <nav id="topbar"><p><a href="drawing.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="../algebra/">→</a></p></nav>
+<p><a href="../core/">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1 nav-leaf"><a href="../">Doodle</a></li>
@@ -42,12 +43,14 @@
           <li class="level2 nav-leaf"><a href="transform.html">Transforms</a></li>
           <li class="level2 nav-leaf"><a href="drawing.html">Drawing to the Screen</a></li>
           <li class="level2 active nav-leaf"><a href="#">Writing to a File</a></li>
+          <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
+          <li class="level1 nav-node"><a href="../interact/">Interactivity</a></li>
+          <li class="level2 nav-leaf"><a href="../interact/animation.html">Animations</a></li>
           <li class="level1 nav-node"><a href="../algebra/">Algebras</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/using.html">Using Algebras</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/picture.html">Picture</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
-          <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
         </ul>
     </nav>
 
@@ -80,7 +83,7 @@
   
 </span><span class="identifier">circle</span><span>.</span><span class="identifier">write</span><span>[</span><span class="type-name">Png</span><span>](</span><span class="string-literal">&quot;circle.png&quot;</span><span>)</span></code></pre>
             <p>Instead of using <code>Png</code> you could use <code>Gif</code> or <code>Jpg</code> to specify those file formats. You&#39;d probably want to change the file name as well if you change the format. That&#39;s it! Your masterpiece is now ready to share with the world.</p>
-            <p class="nextPage"><a href="../algebra/">Algebras→</a></p>
+            <p class="nextPage"><a href="../core/">Core→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
