--- a/algebra/index.html
+++ b/algebra/index.html
@@ -15,11 +15,12 @@
         rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="../creative-scala.css" />
+    <script src="../main.js"></script>
     <script> /* for avoiding page load transitions */</script>
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../pictures/writing.html">←</a></p>
+    <nav id="topbar"><p><a href="../interact/animation.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="using.html">→</a></p></nav>
     <nav id="sidebar">
@@ -42,12 +43,14 @@
           <li class="level2 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/writing.html">Writing to a File</a></li>
+          <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
+          <li class="level1 nav-node"><a href="../interact/">Interactivity</a></li>
+          <li class="level2 nav-leaf"><a href="../interact/animation.html">Animations</a></li>
           <li class="level1 active nav-node"><a href="#">Algebras</a></li>
           <li class="level2 nav-leaf"><a href="using.html">Using Algebras</a></li>
           <li class="level2 nav-leaf"><a href="picture.html">Picture</a></li>
           <li class="level2 nav-leaf"><a href="algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
-          <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
         </ul>
     </nav>
 
