--- a/concepts/picture-object.html
+++ b/concepts/picture-object.html
@@ -15,6 +15,7 @@
         rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="../creative-scala.css" />
+    <script src="../main.js"></script>
     <script> /* for avoiding page load transitions */</script>
 </head>
 
@@ -42,12 +43,14 @@
           <li class="level2 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/writing.html">Writing to a File</a></li>
+          <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
+          <li class="level1 nav-node"><a href="../interact/">Interactivity</a></li>
+          <li class="level2 nav-leaf"><a href="../interact/animation.html">Animations</a></li>
           <li class="level1 nav-node"><a href="../algebra/">Algebras</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/using.html">Using Algebras</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/picture.html">Picture</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
-          <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
         </ul>
     </nav>
 
