--- a/core/index.html
+++ b/core/index.html
@@ -15,13 +15,14 @@
         rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="../creative-scala.css" />
+    <script src="../main.js"></script>
     <script> /* for avoiding page load transitions */</script>
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../effect/">←</a></p>
+    <nav id="topbar"><p><a href="../pictures/writing.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p></p></nav>
+<p><a href="../interact/">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1 nav-leaf"><a href="../">Doodle</a></li>
@@ -42,12 +43,14 @@
           <li class="level2 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
           <li class="level2 nav-leaf"><a href="../pictures/writing.html">Writing to a File</a></li>
+          <li class="level1 active nav-leaf"><a href="#">Core</a></li>
+          <li class="level1 nav-node"><a href="../interact/">Interactivity</a></li>
+          <li class="level2 nav-leaf"><a href="../interact/animation.html">Animations</a></li>
           <li class="level1 nav-node"><a href="../algebra/">Algebras</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/using.html">Using Algebras</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/picture.html">Picture</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
-          <li class="level1 active nav-leaf"><a href="#">Core</a></li>
         </ul>
     </nav>
 
@@ -145,7 +148,7 @@
 </span><span class="comment">// res32: Vec = Vec(x = 0.0, y = 1.0)
 </span><span class="type-name">Vec</span><span>(</span><span class="number-literal">1</span><span>, </span><span class="number-literal">90</span><span>.</span><span class="identifier">degrees</span><span>)
 </span><span class="comment">// res33: Vec = Vec(x = 6.123233995736766E-17, y = 1.0)</span></code></pre>
-            
+            <p class="nextPage"><a href="../interact/">Interactivity→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
