deploy: 5a66f6f7e61f6a216f8a67ffbc3bbed4e2279ca1

--- a/interact/animation.html
+++ b/interact/animation.html
@@ -87,7 +87,7 @@
     .</span><span class="identifier">map</span><span>(</span><span class="identifier">x</span><span> =&gt;
       </span><span class="type-name">Picture</span><span>
         .</span><span class="identifier">circle</span><span>(</span><span class="number-literal">15</span><span>)
-        .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">aliceBlue</span><span>)
+        .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">chartreuse</span><span>)
         .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">3.0</span><span>)
         .</span><span class="identifier">at</span><span>(</span><span class="identifier">x</span><span>, </span><span class="number-literal">0.0</span><span>)
     )
