deploy: 8735db46bb66a94f85d81ff25cc25a99dc9ef7d7

--- a/pictures/layout.html
+++ b/pictures/layout.html
@@ -168,7 +168,7 @@
             </div>
             
             <h2 id="implementation" class="section">Implementation</h2>
-            <p>The <code>Layout</code> algebra supports all the features described above. <code>Image</code> doesn&#39;t support <code>originAt</code>, <code>margin</code>, or landmarks.</p>
+            <p>The <code>Layout</code> algebra supports all the features described above. <code>Image</code> doesn&#39;t support <code>originAt</code>, or landmarks.</p>
             <p class="nextPage"><a href="style.html">Style→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
