--- a/algebra/index.html
+++ b/algebra/index.html
@@ -51,6 +51,7 @@
           <li class="level2 nav-leaf"><a href="picture.html">Picture</a></li>
           <li class="level2 nav-leaf"><a href="algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
+          <li class="level1 nav-leaf"><a href="../development/">Developing Doodle</a></li>
         </ul>
     </nav>
 
