deploy: 07385794e63a9e2ca932e05111c3ee03f2651573

--- a/pictures/drawing.html
+++ b/pictures/drawing.html
@@ -59,7 +59,7 @@
         <main class="content">
             <h1 id="drawing-to-the-screen" class="title">Drawing to the Screen</h1>
             <p>Drawing a picture to the screen is usually the end goal of using Doodle.
-            The usual way to draw a <code>Picture</code> is by calling the <code>draw</code> method. Using the Java2D backend will produce output in a window, while the <a href="https://github.com/creativescala/doodle-svg">SVG backend</a> can produce output inside a web page.</p>
+            The usual way to draw a <code>Picture</code> is by calling the <code>draw</code> method. Using the Java2D backend will produce output in a window, while the SVG backend can produce output inside a web page.</p>
             <p>The examples below use the Java2D backend, but the general principles work with other backends.</p>
             
             <h2 id="imports" class="section">Imports</h2>
