--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="content">
         <main class="content">
             <h1 id="doodle" class="title">Doodle</h1>
-            <p>Doodle is a Scala library for 2D graphics, animation, data visualization, and creative coding. It runs in both the JVM, rendering via <a href="https://en.wikipedia.org/wiki/Java_2D">Java2D</a>, and the web browser using <a href="https://github.com/creativescala/doodle-svg">SVG</a>.</p>
+            <p>Doodle is a Scala library for 2D graphics, animation, data visualization, and creative coding. It runs in both the JVM, rendering via <a href="https://en.wikipedia.org/wiki/Java_2D">Java2D</a>, and the web browser using <a href="https://en.wikipedia.org/wiki/SVG">SVG</a>.</p>
             
             <h2 id="getting-started" class="section">Getting Started</h2>
             <p>To use Doodle, add the following to your <code>build.sbt</code></p>
