--- a/pictures/writing.html
+++ b/pictures/writing.html
@@ -61,8 +61,8 @@
             <p>An <code>Image</code> or <code>Picture</code> can be written to a file as well as displaying it on screen. The file formats you can write depend on the backend you&#39;re using:</p>
             <ul>
               <li>the Java2D backend can write PDF, PNG, GIF, and JPEG; and</li>
-              <li>the <a href="https://github.com/creativescala/doodle-svg">SVG backend</a> running on the JVM can write SVG; but</li>
-              <li>the <a href="https://github.com/creativescala/doodle-svg">SVG backend</a> running in the web browser cannot write files.</li>
+              <li>the SVG backend running on the JVM can write SVG; but</li>
+              <li>the SVG backend running in the web browser cannot write files.</li>
             </ul>
             <p>Most people will use the Java2D backend and the examples below show this.</p>
             
