--- a/pictures/layout.html
+++ b/pictures/layout.html
@@ -170,7 +170,7 @@
             </div>
             
             <h2 id="implementation" class="section">Implementation</h2>
-            <p>The <code>Layout</code> algebra supports all the features described above. <code>Image</code> doesn&#39;t support landmarks.</p>
+            <p>The <code>Layout</code> algebra supports all the features described above, as does <code>Image</code>.</p>
             <p class="nextPage"><a href="style.html">Style→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
