--- a/pictures/layout.html
+++ b/pictures/layout.html
@@ -65,9 +65,9 @@
             
             <h3 id="above-beside-and-on" class="section">Above, Beside, and On</h3>
             <p>The most basic layout methods are <code>above</code>, <code>beside</code>, and <code>on</code>. They do what their names suggest, putting a picture above, beside, or on top of another picture. Below is an example.</p>
-            <pre><code class="nohighlight"><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">core</span><span>.</span><span class="identifier">_</span><span>
-</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">java2d</span><span>.</span><span class="identifier">_</span><span>
-</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">syntax</span><span>.</span><span class="identifier">all</span><span>.</span><span class="identifier">_</span><span>
+            <pre><code class="nohighlight"><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">core</span><span>.*
+</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">java2d</span><span>.*
+</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">syntax</span><span>.</span><span class="identifier">all</span><span>.*
 
 </span><span class="keyword">val</span><span> </span><span class="identifier">basicLayout</span><span> =
   </span><span class="type-name">Picture</span><span>
