deploy: 72bf78f2e4df03faba1a2b6f271f536061b09408

--- a/development/index.html
+++ b/development/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../effect/">←</a></p>
+    <nav id="topbar"><p><a href="../svg/">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p></p></nav>
     <nav id="sidebar">
@@ -52,6 +52,7 @@
           <li class="level2 nav-leaf"><a href="../algebra/picture.html">Picture</a></li>
           <li class="level2 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
+          <li class="level1 nav-leaf"><a href="../svg/">Doodle SVG</a></li>
           <li class="level1 active nav-leaf"><a href="#">Developing Doodle</a></li>
         </ul>
     </nav>
