--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <li class="level2 nav-leaf"><a href="algebra/picture.html">Picture</a></li>
           <li class="level2 nav-leaf"><a href="algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="effect/">Effects</a></li>
+          <li class="level1 nav-leaf"><a href="svg/">Doodle SVG</a></li>
           <li class="level1 nav-leaf"><a href="development/">Developing Doodle</a></li>
         </ul>
     </nav>
